--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
         node-version: 12 
 
     # Runs a set of commands using the runners shell
-    - name: Installing surge
+    - name: Installing Surge
       run: npm install -g surge
-    - name: deploying using surge
+    - name: Deploying using Surge
       run: surge ./ bootcamp_practice.surge.sh --token ${{ secrets.SURGE_TOKEN }}
